# examples

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: scroll_bar.xml
app/src/main/res/layout/: activity_controller.xml  activity_image_splice.xml  activity_main.xml  activity_paged_loaded.xml  activity_quad_head.xml  activity_rotate.xml  activity_temporature.xml  simpletv.xml  single_activity.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
filesearch/: build.gradle
filesearch/src/main/: AndroidManifest.xml
filesearch/src/main/jni/: CMakeLists.txt  common_header.h  filesearch.cpp  filesearch.h
filesearch/src/main/jni/file/: FileInfo.cpp  FileInfo.h  SuffixNode.h  SuffixTire.cpp  SuffixTire.h
filesearch/src/main/jni/utils/: FileUtils.cpp  FileUtils.h  SuffixUtils.cpp  SuffixUtils.h
filesearch/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
jnidemo/: build.gradle
jnidemo/src/main/: AndroidManifest.xml
jnidemo/src/main/jni/: CMakeLists.txt  common.h  entry.cpp  mmaputils.cpp
jnidemo/src/main/jni/gles/: glutils.cpp  glutils.h  traingles.cpp
jnidemo/src/main/jni/samples/: NativeImage.h  texturemap.cpp
jnidemo/src/main/jni/shadertoy/: shadertoy.cpp  shadertoy.h
jnidemo/src/main/jni/vbo/: TriVBO.cpp
jnidemo/src/main/res/layout/: activity_earth.xml  activity_glut.xml  (+8 more)
jnidemo/src/main/rs/: Gray.rs
pinyin/: build.gradle
pinyin/src/main/: AndroidManifest.xml
(+80 files in other folders)
